Fix Markbot code errors and spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -25,10 +25,12 @@
     width: 50%;
   }
 
-  @media only screen and (min-width: 60em) {
+}
 
-    .l-1-3 {
-      width: 33.3333%;
-    }
+@media only screen and (min-width: 60em) {
+
+  .l-1-3 {
+    width: 33.3333%;
+  }
 
 }
